#17 fix flicker issue when using search box

--- a/www/css/phone/iphone5.css
+++ b/www/css/phone/iphone5.css
@@ -18,6 +18,10 @@
   width:100%;
 }
 
+#home-swiper-header {
+  position:fixed;
+}
+
 #home-swiper-header .swiper-container {
   height: 70px;
   width: 640px;
